Fix Char view at game start
populate starting character stats from stats if given.